revert a change that required jdk1.5 to compile
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@632077 13f79535-47bb-0310-9956-ffa450edef68